# libllm

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
src/libllm/: CMakeLists.txt  benchmark_main.cc  bilibili_index.cc  bilibili_index.h  bpe_config.cc  bpe_config.h  bpe_encoder.cc  bpe_encoder.h  bpe_model.cc  bpe_model.h  c_api.cc  chatglm.cc  chatglm.h  chatglm_test.cc  context.cc  context.h  device.cc  device.h  dialog_manager.cc  dialog_manager.h  dtype.cc  dtype.h  functional.cc  functional.h  generator.cc  generator.h  llama.cc  llama.h  llama_test.cc  llm.cc  llm.h  llm_asr.cc  llm_cpp.h  llm_json.cc  llm_main.cc  model_factory.cc  model_factory.h  model_for_generation.cc  model_for_generation.h  module.cc  (+38 more)
src/libllm/cpu/: accessor.h  all_close.cc  all_close.h  apply_rotary_pos_emb.cc  apply_rotary_pos_emb.h  attention.cc  attention.h  binary_op.cc  binary_op.h  cast.cc  cast.h  cat.cc  cat.h  common.h  copy.cc  copy.h  cpu_operators.cc  cpu_operators.h  cpu_tensor_data.cc  cpu_tensor_data.h  fill.cc  fill.h  fingerprint.cc  fingerprint.h  gelu.cc  log_mel_spectrogram.cc  log_mel_spectrogram_test.cc  lookup.cc  lookup.h  matmul.cc  matmul.h  mul.cc  mul.h  normalizations.cc  normalizations.h  print.cc  print.h  rand.cc  rand.h  reduce.cc  (+19 more)
src/libllm/cuda/: accessor.h  apply_rotary_pos_emb.cu  apply_rotary_pos_emb.h  arange.cu  arange.h  binary.cu  binary.h  binary_op.cu  binary_op.h  binary_scalar.cu  binary_scalar.h  cast.cu  cast.h  causal_mask.cu  common.cc  common.h  copy.cu  copy.h  cuda_operators.cc  cuda_operators.h  cuda_tensor_data.cc  cuda_tensor_data.h  dequant.cu  dequant.h  fill.cu  fill.h  gelu.cu  gemm.h  gemm_cublas.cc  gemm_cublas.h  gemm_cutlass.cu  gemm_cutlass_mxfp4.cu  layer_norm.cu  layer_norm.h  lookup.cu  matmul.cc  matmul.h  matvec.cu  matvec.h  print.cc  (+22 more)
src/libllm/llm/: CMakeLists.txt
src/libllm/llyn/: context.cc  context.h  device.cc  dtype.cc  functional.cc  functional.h  llyn.h  nn_test.cc  state_map.cc  state_map.h  tensor_test.cc  util.cc
src/libllm/lut/: CMakeLists.txt  attributes.h  base64.cc  base64.h  c_ptr.h  error.cc  error.h  fixed_array.h  flags.cc  flags.h  half.cc  half.h  ini_config.cc  ini_config.h  is_debug.cc  is_debug.h  log.h  path.cc  path.h  path_darwin.cc  path_linux.cc  path_test.cc  path_windows.cc  platform.h  platform_linux.cc  platform_windows.cc  pool.h  random.cc  random.h  range.cc  range.h  reader.cc  reader.h  shared_library.h  shared_library_linux.cc  shared_library_windows.cc  span.h  strings.cc  strings.h  strings_test.cc  (+6 more)
src/libllm/lymath/: CMakeLists.txt  args.h  benchmark.cc  common.h  q4dequant.h  q4kernel.h  q4sym_gemm.h  q4sym_kernel.h  sgemm.h  sgemv.h  skernel.h  util.cc
src/libllm/lytok/: bpe_config.cc  bpe_config.h  bpe_encoder.h  bpe_model.cc  bpe_model.h  lytok.h  tokenizer.cc  tokenizer.h  tokenizer_test.cc
src/libllm/lyutil/: CMakeLists.txt  attributes.h  error.cc  error.h  fixed_array.h  flags.cc  flags.h  ini_config.cc  log.h  path.cc  path.h  path_linux.cc  path_windows.cc  reader.cc  reader.h  strings.cc  strings.h  strings_test.cc  time.h
src/llm/: CMakeLists.txt
src/llm/api/: environment.h  llm.cc  llm.h  llm_cpp.h  model_factory.cc  model_factory.h
src/llm/chatglm/: chatglm_config.cc  chatglm_config.h  chatglm_model.cc  chatglm_model.h  chatglm_model_for_generation.cc  chatglm_model_for_generation.h  chatglm_model_test.cc  glm_block.cc  glm_block.h  glm_block_test.cc  mlp.cc  mlp.h  mlp_test.cc  self_attention.cc  self_attention.h  self_attention_test.cc  test_common.h
src/llm/chatglm2/: chatglm2_config.cc  chatglm2_config.h  chatglm2_model.cc  chatglm2_model.h  chatglm2_model_for_generation.cc  chatglm2_model_for_generation.h  chatglm2_model_test.cc  glm_block.cc  glm_block.h  mlp.cc  mlp.h  self_attention.cc  self_attention.h
src/llm/cli/: dialog_manager.cc  dialog_manager.h  llm.cc  test_main.cc
src/llm/common/: generator.cc  generator.h  model_for_generation.h  sampler.cc  sampler.h
src/llm/llama/: attention.cc  attention.h  decoder_layer.cc  decoder_layer.h  llama_config.cc  llama_config.h  llama_model.cc  llama_model.h  llama_model_for_generation.cc  llama_model_for_generation.h  mlp.cc  mlp.h
src/llyn/: CMakeLists.txt  context.cc  context.h  device.cc  device.h  dtype.cc  dtype.h  functional.cc  functional.h  llyn.cc  state_map.cc  tensor.cc  tensor.h  util.h
src/llyn/cpu/: attention.h  copy.cc  cpu_operators.cc  cpu_operators.h  internal.cc  lookup.cc  matmul.cc  mul.cc  print.cc  subtensor.h  view.cc
src/llyn/cuda/: cast.cu  copy.cu  create_tensor.cc  create_tensor.cu  create_tensor.h  cuda_common.cc  cuda_common.h  cuda_operators.cc  cuda_operators.h  cudnn_operators.cc  cudnn_operators.h  dequant.cuh  lookup.cu  lookup.h  subtensor.h  test.cc  to_device.cc  (+1 more)
src/lutil/: CMakeLists.txt  base64.h  c_ptr.h  error.cc  flags.cc  flags.h  log.h  optional.h  path.cc  path_darwin.cc  path_test.cc  platform.h  platform_linux.cc  pool.h  random.cc  reader.cc  shared_library.h  shared_library_linux.cc  span.h  strings.cc  strings.h  thread_pool.cc  thread_pool.h  time.cc  time.h  zip_file.cc  zip_file.h
src/ly/: CMakeLists.txt  README.md  context.cc  context.h  device.cc  device.h  dtype.cc  dtype.h  functional.cc  functional.h  ly.cc  ly.h  state_map.cc  state_map.h  tensor.cc  tensor.h
src/lymath/: CMakeLists.txt  args.h  benchmark.cc  common.h  gemm_common.h  gemv_common.h  hcvt.h  hkernel.h  kernel_avx2.cc  kernel_avx512.cc  kernel_fallback.cc  lymath.cc  lymath.h  q4dequant.h  q4gemm.h  q4kernel.h  q4sym_dequant.h  q4sym_gemm.h  test.cc  util.cc  util.h
src/lynn/: CMakeLists.txt  README.md  context.cc  context.h  device.cc  device.h  dtype.cc  dtype.h  functional.cc  functional.h  module.cc  module.h  module_test.cc  mp.cc  mp.h  mp_openmp.cc  mp_thread_pool.cc  operator_benchmark.cc  operator_benchmark.h  operator_tester.cc  operator_tester.h  operators.cc  operators.h  state_map.cc  state_map.h  tensor.cc  tensor.h  tensor_data.h  tensor_shape.cc  tensor_shape.h  tensor_test.cc  test_helper.cc  test_helper.h
(+995 files in other folders)
